org.eclipse.ecl.parser/src/org/eclipse/ecl/internal/parser/EclParser.java
// $ANTLR 3.0 D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g 2011-03-04 16:02:19

package org.eclipse.ecl.internal.parser;
import org.antlr.runtime.BitSet;
import org.antlr.runtime.MismatchedSetException;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;
import org.eclipse.ecl.core.Command;
import org.eclipse.ecl.core.CoreFactory;
import org.eclipse.ecl.core.Exec;
import org.eclipse.ecl.core.ExecutableParameter;
import org.eclipse.ecl.core.LiteralParameter;
import org.eclipse.ecl.core.Parallel;
import org.eclipse.ecl.core.Parameter;
import org.eclipse.ecl.core.Pipeline;
import org.eclipse.ecl.core.Sequence;
import org.eclipse.ecl.gen.ast.AstFactory;
import org.eclipse.ecl.gen.ast.AstExec;
import org.eclipse.ecl.gen.ast.AstLiteral;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class EclParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "COLON", "AND", "OR", "LOPEN", "ROPEN", "LBRACK", "RBRACK", "NAME", "DNAME", "IP4", "NUMBER", "STRING", "CURLY_STRING", "SEMI", "DIGIT", "LCURLY", "RCURLY", "WS", "NEWLINE", "COMMENT", "LINE_COMMENT", "'@'", "'-'", "'='"
    };
    public static final int RBRACK=10;
    public static final int LBRACK=9;
    public static final int LINE_COMMENT=24;
    public static final int NUMBER=14;
    public static final int LCURLY=19;
    public static final int AND=5;
    public static final int EOF=-1;
    public static final int SEMI=17;
    public static final int COLON=4;
    public static final int NAME=11;
    public static final int WS=21;
    public static final int NEWLINE=22;
    public static final int CURLY_STRING=16;
    public static final int DNAME=12;
    public static final int RCURLY=20;
    public static final int OR=6;
    public static final int LOPEN=7;
    public static final int IP4=13;
    public static final int DIGIT=18;
    public static final int ROPEN=8;
    public static final int COMMENT=23;
    public static final int STRING=15;

        public EclParser(TokenStream input) {
            super(input);
        }
        

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g"; }

      
    	CoreFactory factory = CoreFactory.eINSTANCE;  
    	Command processSequence(Command cmd, Command c2 ) {
    		//Construct sequence if not yet constructed.
    		if (cmd instanceof Sequence) {
    			Sequence seq = (Sequence) cmd;
    			if (c2 != null) {
    				seq.getCommands().add(c2);
    			}
    			return seq;
    		}
    		else {
    			Sequence seq = factory.createSequence();
    			seq.getCommands().add(cmd);
    			seq.getCommands().add(c2);
    			return seq;
    		}
    	}	
    	
      public void displayRecognitionError(String[] tokenNames,
          RecognitionException e) {
          throw new SyntaxErrorException(e.line, e.charPositionInLine);
      }
      
      private boolean lookupNL() {
        int index=input.index();
        int start=input.mark();
        
        if (index >= input.size()) {
          return true;
        }
        if(index < input.size())
        {
          if(input.get(index).getType() == RBRACK)
            return true;
          if(input.get(index).getType() == RCURLY)
            return true;
        }
        Token token;
        boolean result=false;
        while (index > 0)
        {
          // look back in the hidden channel until we find a linebreak
          index--;
          token = input.get(index);
          if (token.getType() == EOF) {
            result=true;
            break;
          }
          if (token.getChannel() != Token.HIDDEN_CHANNEL)
          {
            /* We are out of the hidden channel, in other word we found a "real" item,
            which means we didn't find a linebreak, so we are done (false)
            */
            break;
          }
          if (token.getType() == NEWLINE)
          {
            // found our LineBreak (true)
            result=true;
            break;
          }
        }
        if(index==0)
          result=true;
        input.rewind(start);
        return result;
    }



    // $ANTLR start commands
    // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:116:1: commands returns [Command cmd=null;] : exprs= expr_list ;
    public final Command commands() throws RecognitionException {
        Command cmd = null;;

        Sequence exprs = null;


        try {
            // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:117:2: (exprs= expr_list )
            // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:117:2: exprs= expr_list
            {
            pushFollow(FOLLOW_expr_list_in_commands68);
            exprs=expr_list();
            _fsp--;

            cmd=exprs;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return cmd;
    }
    // $ANTLR end commands


    // $ANTLR start expr_list
    // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:119:1: expr_list returns [Sequence seq=null] : (c2= expression )* ;
    public final Sequence expr_list() throws RecognitionException {
        Sequence seq = null;

        Command c2 = null;


        try {
            // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:120:3: ( (c2= expression )* )
            // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:120:3: (c2= expression )*
            {
            seq = factory.createSequence();
            // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:121:3: (c2= expression )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==LOPEN||(LA1_0>=NAME && LA1_0<=DNAME)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:121:5: c2= expression
            	    {
            	    pushFollow(FOLLOW_expression_in_expr_list92);
            	    c2=expression();
            	    _fsp--;

            	    seq.getCommands().add(c2);

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return seq;
    }
    // $ANTLR end expr_list


    // $ANTLR start expression
    // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:124:1: expression returns [Command cmd=null;] : c= and_expr eos ;
    public final Command expression() throws RecognitionException {
        Command cmd = null;;

        Command c = null;


        try {
            // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:125:4: (c= and_expr eos )
            // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:125:4: c= and_expr eos
            {
            pushFollow(FOLLOW_and_expr_in_expression114);
            c=and_expr();
            _fsp--;


               	cmd = c;
               
            pushFollow(FOLLOW_eos_in_expression121);
            eos();
            _fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return cmd;
    }
    // $ANTLR end expression


    // $ANTLR start eos
    // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:131:1: eos : ( EOF | COLON | {...}?);
    public final void eos() throws RecognitionException {
        try {
            // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:133:5: ( EOF | COLON | {...}?)
            int alt2=3;
            switch ( input.LA(1) ) {
            case EOF:
                {
                int LA2_1 = input.LA(2);

                if ( (LA2_1==EOF||LA2_1==COLON||(LA2_1>=LOPEN && LA2_1<=ROPEN)||(LA2_1>=RBRACK && LA2_1<=DNAME)) ) {
                    alt2=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("131:1: eos : ( EOF | COLON | {...}?);", 2, 1, input);

                    throw nvae;
                }
                }
                break;
            case COLON:
                {
                switch ( input.LA(2) ) {
                case EOF:
                case COLON:
                case ROPEN:
                case RBRACK:
                    {
                    alt2=2;
                    }
                    break;
                case NAME:
                    {
                    int LA2_17 = input.LA(3);

                    if ( (!(lookupNL())) ) {
                        alt2=2;
                    }
                    else if ( (lookupNL()) ) {
                        alt2=3;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("131:1: eos : ( EOF | COLON | {...}?);", 2, 17, input);

                        throw nvae;
                    }
                    }
                    break;
                case DNAME:
                    {
                    int LA2_18 = input.LA(3);

                    if ( (!(lookupNL())) ) {
                        alt2=2;
                    }
                    else if ( (lookupNL()) ) {
                        alt2=3;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("131:1: eos : ( EOF | COLON | {...}?);", 2, 18, input);

                        throw nvae;
                    }
                    }
                    break;
                case LOPEN:
                    {
                    int LA2_19 = input.LA(3);

                    if ( (!(lookupNL())) ) {
                        alt2=2;
                    }
                    else if ( (lookupNL()) ) {
                        alt2=3;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("131:1: eos : ( EOF | COLON | {...}?);", 2, 19, input);

                        throw nvae;
                    }
                    }
                    break;
                default:
                    NoViableAltException nvae =
                        new NoViableAltException("131:1: eos : ( EOF | COLON | {...}?);", 2, 2, input);

                    throw nvae;
                }

                }
                break;
            case LOPEN:
            case ROPEN:
            case RBRACK:
            case NAME:
            case DNAME:
                {
                alt2=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("131:1: eos : ( EOF | COLON | {...}?);", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:133:5: EOF
                    {
                    match(input,EOF,FOLLOW_EOF_in_eos136); 

                    }
                    break;
                case 2 :
                    // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:134:5: COLON
                    {
                    match(input,COLON,FOLLOW_COLON_in_eos142); 

                    }
                    break;
                case 3 :
                    // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:135:5: {...}?
                    {
                    if ( !(lookupNL()) ) {
                        throw new FailedPredicateException(input, "eos", "lookupNL()");
                    }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end eos


    // $ANTLR start and_expr
    // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:137:1: and_expr returns [Command cmd=null;] : or1= or_expr ( AND or2= or_expr )* ;
    public final Command and_expr() throws RecognitionException {
        Command cmd = null;;

        Command or1 = null;

        Command or2 = null;


        try {
            // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:138:3: (or1= or_expr ( AND or2= or_expr )* )
            // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:138:3: or1= or_expr ( AND or2= or_expr )*
            {
            pushFollow(FOLLOW_or_expr_in_and_expr164);
            or1=or_expr();
            _fsp--;

            cmd=or1;
            // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:138:26: ( AND or2= or_expr )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==AND) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:138:27: AND or2= or_expr
            	    {
            	    match(input,AND,FOLLOW_AND_in_and_expr169); 
            	    pushFollow(FOLLOW_or_expr_in_and_expr173);
            	    or2=or_expr();
            	    _fsp--;


            	      	//Construct parallel if not yet constructed.
            	    	if (cmd instanceof Parallel) {
            	    		Parallel par = (Parallel) cmd;
            	    		if (or2 != null) {
            	    			par.getCommands().add(or2);
            	    		}
            	    		cmd = par;
            	    	}
            	    	else {
            	    		Parallel par = factory.createParallel();
            	    		par.getCommands().add(cmd);
            	    		par.getCommands().add(or2);
            	    		cmd = par;
            	    	}
            	      

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return cmd;
    }
    // $ANTLR end and_expr


    // $ANTLR start or_expr
    // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:156:1: or_expr returns [Command cmd=null;] : c= cmd ( OR cmd2= cmd )* ;
    public final Command or_expr() throws RecognitionException {
        Command cmd = null;;

        Command c = null;

        Command cmd2 = null;


        try {
            // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:157:3: (c= cmd ( OR cmd2= cmd )* )
            // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:157:3: c= cmd ( OR cmd2= cmd )*
            {
            pushFollow(FOLLOW_cmd_in_or_expr195);
            c=cmd();
            _fsp--;


              cmd = c;
              
            // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:159:6: ( OR cmd2= cmd )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==OR) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:159:7: OR cmd2= cmd
            	    {
            	    match(input,OR,FOLLOW_OR_in_or_expr201); 
            	    pushFollow(FOLLOW_cmd_in_or_expr205);
            	    cmd2=cmd();
            	    _fsp--;


            	      	//Construct pipe if not yet constructed.
            	    	if (cmd instanceof Pipeline) {
            	    		Pipeline pipe = (Pipeline) cmd;
            	    		if (cmd2 != null) {
            	    			pipe.getCommands().add(cmd2);
            	    		}
            	    		cmd = pipe;
            	    	}
            	    	else {
            	    		Pipeline pipe = factory.createPipeline();
            	    		pipe.getCommands().add(cmd);
            	    		pipe.getCommands().add(cmd2);
            	    		cmd = pipe;
            	    	}
            	      

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return cmd;
    }
    // $ANTLR end or_expr


    // $ANTLR start open_expr_list
    // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:177:1: open_expr_list returns [Command cmd=null] : c= expression ( COLON c2= expression )* ;
    public final Command open_expr_list() throws RecognitionException {
        Command cmd = null;

        Command c = null;

        Command c2 = null;


        try {
            // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:178:3: (c= expression ( COLON c2= expression )* )
            // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:178:3: c= expression ( COLON c2= expression )*
            {
            pushFollow(FOLLOW_expression_in_open_expr_list227);
            c=expression();
            _fsp--;


              	if( c != null ) {
              		cmd=c;
              	}
              
            // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:182:5: ( COLON c2= expression )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==COLON) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:182:6: COLON c2= expression
            	    {
            	    match(input,COLON,FOLLOW_COLON_in_open_expr_list232); 
            	    pushFollow(FOLLOW_expression_in_open_expr_list236);
            	    c2=expression();
            	    _fsp--;


            	      	cmd = processSequence(cmd, c2);
            	      

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return cmd;
    }
    // $ANTLR end open_expr_list


    // $ANTLR start cmd
    // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:187:1: cmd returns [Command cmd=null;] : (c= command | LOPEN c= open_expr_list ROPEN );
    public final Command cmd() throws RecognitionException {
        Command cmd = null;;

        Command c = null;


        try {
            // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:188:2: (c= command | LOPEN c= open_expr_list ROPEN )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( ((LA6_0>=NAME && LA6_0<=DNAME)) ) {
                alt6=1;
            }
            else if ( (LA6_0==LOPEN) ) {
                alt6=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("187:1: cmd returns [Command cmd=null;] : (c= command | LOPEN c= open_expr_list ROPEN );", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:188:2: c= command
                    {
                    pushFollow(FOLLOW_command_in_cmd256);
                    c=command();
                    _fsp--;


                    	cmd = c;
                     

                    }
                    break;
                case 2 :
                    // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:191:2: LOPEN c= open_expr_list ROPEN
                    {
                    match(input,LOPEN,FOLLOW_LOPEN_in_cmd263); 
                    pushFollow(FOLLOW_open_expr_list_in_cmd267);
                    c=open_expr_list();
                    _fsp--;


                     	cmd = c; 
                     
                    match(input,ROPEN,FOLLOW_ROPEN_in_cmd271); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return cmd;
    }
    // $ANTLR end cmd


    // $ANTLR start command
    // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:196:1: command returns [Exec cmd=null;] : n= command_name (ho= host )? (a= argument_value )* (arg= argument )* ;
    public final Exec command() throws RecognitionException {
        Exec cmd = null;;

        String n = null;

        String ho = null;

        Parameter a = null;

        Parameter arg = null;


        try {
            // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:197:3: (n= command_name (ho= host )? (a= argument_value )* (arg= argument )* )
            // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:197:3: n= command_name (ho= host )? (a= argument_value )* (arg= argument )*
            {

                Token t = input.LT(1);
                int line = t.getLine();
                int column = t.getCharPositionInLine();
              
            pushFollow(FOLLOW_command_name_in_command291);
            n=command_name();
            _fsp--;


               	AstExec exec = AstFactory.eINSTANCE.createAstExec();
               	exec.setLine(line);
                exec.setColumn(column + 1);
                cmd = exec;
               	int index = n.lastIndexOf("::");
               	if( index == -1 ) {
               		cmd.setName(n);
               	}
               	else {
               		cmd.setNamespace(n.substring(0, index));
               		cmd.setName(n.substring(index+2));
               	}
               
            // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:216:4: (ho= host )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==25) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:216:5: ho= host
                    {
                    pushFollow(FOLLOW_host_in_command302);
                    ho=host();
                    _fsp--;


                    		cmd.setHost(ho);
                       

                    }
                    break;

            }

            // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:219:4: (a= argument_value )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==NAME) ) {
                    int LA8_7 = input.LA(2);

                    if ( (!(lookupNL())) ) {
                        alt8=1;
                    }


                }
                else if ( (LA8_0==LBRACK||(LA8_0>=NUMBER && LA8_0<=CURLY_STRING)) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:219:5: a= argument_value
            	    {
            	    pushFollow(FOLLOW_argument_value_in_command314);
            	    a=argument_value();
            	    _fsp--;


            	       	if( a != null ) {
            	     		cmd.getParameters().add(a);
            	       	}
            	       

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);

            // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:224:4: (arg= argument )*
            loop9:
            do {
                int alt9=2;
                int LA9_0 = input.LA(1);

                if ( (LA9_0==26) ) {
                    alt9=1;
                }


                switch (alt9) {
            	case 1 :
            	    // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:224:5: arg= argument
            	    {
            	    pushFollow(FOLLOW_argument_in_command327);
            	    arg=argument();
            	    _fsp--;


            	       	if( arg != null ) {
            	     		cmd.getParameters().add(arg);
            	       	}
            	       

            	    }
            	    break;

            	default :
            	    break loop9;
                }
            } while (true);


                t = input.LT(-1);
                int end = t.getCharPositionInLine()+t.getText().length();
                int length = end - column;
                exec.setLength(length);
              

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return cmd;
    }
    // $ANTLR end command


    // $ANTLR start subcommand
    // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:237:1: subcommand returns [Parameter param=null;] : LBRACK c= expr_list RBRACK ;
    public final Parameter subcommand() throws RecognitionException {
        Parameter param = null;;

        Sequence c = null;


        try {
            // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:238:3: ( LBRACK c= expr_list RBRACK )
            // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:238:3: LBRACK c= expr_list RBRACK
            {
            match(input,LBRACK,FOLLOW_LBRACK_in_subcommand348); 
            pushFollow(FOLLOW_expr_list_in_subcommand356);
            c=expr_list();
            _fsp--;


                	ExecutableParameter p = factory.createExecutableParameter();
              		p.setCommand(c);
            	  	param = p;
                
            match(input,RBRACK,FOLLOW_RBRACK_in_subcommand362); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return param;
    }
    // $ANTLR end subcommand


    // $ANTLR start command_name
    // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:247:1: command_name returns [String name=null;] : (n= NAME | n= DNAME ) ;
    public final String command_name() throws RecognitionException {
        String name = null;;

        Token n=null;

        try {
            // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:248:2: ( (n= NAME | n= DNAME ) )
            // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:248:2: (n= NAME | n= DNAME )
            {
            // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:248:2: (n= NAME | n= DNAME )
            int alt10=2;
            int LA10_0 = input.LA(1);

            if ( (LA10_0==NAME) ) {
                alt10=1;
            }
            else if ( (LA10_0==DNAME) ) {
                alt10=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("248:2: (n= NAME | n= DNAME )", 10, 0, input);

                throw nvae;
            }
            switch (alt10) {
                case 1 :
                    // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:248:3: n= NAME
                    {
                    n=(Token)input.LT(1);
                    match(input,NAME,FOLLOW_NAME_in_command_name380); 

                    }
                    break;
                case 2 :
                    // D:\\dev\\q7\\workspace\\test\\META-INF\\Ecl.g:248:33: n= DNAME
                    {
                    n=(Token)input.LT(1);
                    match(input,DNAME,FOLLOW_DNAME_in_command_name387); 

                    }
                    break;

            }
